<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieDatabase</string>
    <string name="action_settings">Settings</string>
    <string name="prev_button_text">Prev</string>
    <string name="view_button_text">View</string>
    <string name="next_button_text">Next</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_web">View Web Page</string>
    <string name="edit_title_label">Title</string>
    <string name="edit_genre_label">Genre</string>
    <string name="edit_url_label">URL</string>
    <string name="watched_checkbox_text">Watched</string>
    <string name="rating_bar_label">Rating</string>
    <string name="title_activity_movie_web">Movie Web Viewer</string>
    <string name="title_activity_movie_detail">Movie Detail</string>
    <string name="title_activity_main">Main</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
